// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio buttons, if no props are set 1`] = `
<label
  className="radio-button-label"
>
  <input />
</label>
`;

exports[`Radio buttons, if with props 1`] = `
<label
  className="radio-button-label"
>
  value
  <input
    name="name"
    onClick={[Function]}
    type="radio"
    value="value"
  />
</label>
`;
